--- a/src/main/webapp/app/prod/prod.view.html
+++ b/src/main/webapp/app/prod/prod.view.html
@@ -23,15 +23,153 @@
 <body ng-cloak>
 	<div class="container-fluid container-margin"
 		ng-controller="ProdCtrl as vm">
-			Helloworld
+		<uib-tabset> <uib-tab active="vm.tabs[0].selected"
+			heading="{{vm.tabs[0].title}}" select="vm.resetPage()"
+			ng-click="vm.resetTable()">
+		<div flash-message="3500" class="text-center"></div>
+		<form class="form-horizontal form-margin" novalidate="novalidate"
+			ng-submit="vm.search()" name="vm.prodForm">
+			<div class="col-md-12">
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">รหัสสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" class="form-control"
+								ng-model="vm.prod.prodCode" />
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">ชื่อสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" class="form-control"
+								ng-model="vm.prod.prodName">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">ยี่ห้อสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" class="form-control"
+								ng-model="vm.prod.prodBrand">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12">
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">รุ่นสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" class="form-control"
+								ng-model="vm.prod.prodModel">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">ประเภทสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" class="form-control"
+								ng-model="vm.prod.productType"></input>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 col-sm-12">
+				<div class="form-group">
+					<div class="col-md-1 col-md-offset-5 text-center">
+						<button class="btn btn-default" type="submit"
+							ng-disabled="vm.empForm.$invalid">
+							<fa name="search" size="1" title="search"></fa>
+							ค้นหา
+						</button>
+					</div>
+					<div class="col-md-1 text-center">
+						<button class="btn btn-default"
+							ng-click="vm.emp.id == null ? vm.resetForm() : vm.resetDefault()"
+							type="button" ng-disabled="vm.empForm.$pristine">
+							<fa name="remove" size="1" title="Reset"></fa>
+							ยกเลิก
+						</button>
+					</div>
+				</div>
+			</div>
+		</form>
+		</uib-tab> <uib-tab active="vm.tabs[1].selected" heading="{{vm.tabs[1].title}}"
+			ng-click="vm.resetPage()"></uib-tab> </uib-tabset>
+
+		<!-- Employee Table -->
+
+		<div class="col-md-12">
+			<div class="pull-right">
+				<select ng-model="vm.selectedNumPerPage"
+					ng-selected="vm.numPerPage = vm.selectedNumPerPage.number"
+					ng-options="n.number for n in vm.numPerPages"
+					class="input-sm form-control selector-option"></select>
+			</div>
 		</div>
+		<div class="col-md-12">
+			<table st-table="displayedProd" wt-responsive-table
+				st-safe-src="vm.prodList" class="table table-striped table-bordered">
+				<thead>
+					<tr>
+						<th class="text-center"></th>
+						<th class="text-center" st-sort="prodCode">รหัสสินค้า</th>
+						<th class="text-center" st-sort="prodName">ชื่อสินค้า</th>
+						<th class="text-center" st-sort="prodBrand">ยี่ห้อ</th>
+						<th class="text-center" st-sort="prodModel">รุ่น</th>
+						<th class="text-center" st-sort="prodColor">สี</th>
+						<th class="text-center" st-sort="prodPrice">ราคา</th>
+						<th class="text-center" st-sort="prodQuantity">จำนวน</th>
+						<th class="text-center" st-sort="productType">ประเภท</th>
+						<th class="text-center" st-sort="prodStatus">สถานะ</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="prod in displayedProd">
+						<td class="text-center"></td>
+						<td class="text-center">{{prod.prodCode}}</td>
+						<td class="text-center">{{prod.prodName}}</td>
+						<td class="text-center">{{prod.prodBrand}}td>
+						<td class="text-center">{{prod.prodModel}}</td>
+						<td class="text-center">{{prod.prodColor}}</td>
+						<td class="text-center">{{prod.prodPrice}}</td>
+						<td class="text-right">{{prod.prodQuantity}}</td>
+						<td class="text-right">{{prod.productType}}</td>
+						<td class="text-right">{{prod.prodStatus}}</td>
+						<td class="text-center"><button class="btn btn-info"
+								ng-click="vm.update(emp)">
+								<fa name="edit"></fa>
+							</button>
+
+							<button class="btn btn-danger" ng-click="vm.remove(emp.id)">
+								<fa name="trash-o"></fa>
+							</button></td>
+					</tr>
+				</tbody>
+				<tfoot>
+					<tr>
+						<td colspan="11" class="text-center">
+							<div st-pagination="" st-items-by-page="vm.numPerPage"
+								st-displayed-pages="displayedPages"
+								st-template="app/common/pagination/pagination.tpl.html"></div>
+						</td>
+					</tr>
+				</tfoot>
+			</table>
+		</div>
+	</div>
 
 	<!-- APPLICATION -->
 	<script src="./app/app.js">
 		
 	</script>
-	<script src="./app/emp/emp.ctrl.js"></script>
-	<script src="./app/emp/emp.service.js"></script>
+	<script src="./app/prod/prod.ctrl.js"></script>
+	<script src="./app/prod/prod.service.js"></script>
 	<!-- BOOTSTRAP -->
 	<script src="./assets/js/jquery.min.js"></script>
 	<script src="./assets/js/bootstrap.min.js"></script>
