--- a/src/main/webapp/app/prod/prod.view.html
+++ b/src/main/webapp/app/prod/prod.view.html
@@ -72,8 +72,24 @@
 					<div class="form-group">
 						<label class="col-md-4 control-label">ประเภทสินค้า</label>
 						<div class="col-md-8">
-							<input type="text" class="form-control"
-								ng-model="vm.prod.productType"></input>
+							<div class="input-group">
+								<input type="text" class="form-control"
+									aria-describedby="credit"
+									ng-model="vm.prod.productType.typeName" readonly><span
+									class="input-group-btn">
+									<button title="search" ng-bootbox-custom-dialog
+										ng-bootbox-custom-dialog-template="common/partials/select-prodType-dialog.tpl.html"
+										ng-bootbox-options="vm.viewProdTypeModal"
+										ng-click="vm.getProdType()" class="btn btn-default"
+										type="button">
+										<fa name="search" size="1"></fa>
+									</button>
+								</span> <span class="input-group-btn"><button title="Reset"
+										ng-click="vm.prod.productType = null" class="btn btn-default"
+										type="button">
+										<fa name="remove" size="1"></fa>
+									</button></span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -81,8 +97,7 @@
 			<div class="col-md-12 col-sm-12">
 				<div class="form-group">
 					<div class="col-md-1 col-md-offset-5 text-center">
-						<button class="btn btn-default" type="submit"
-							ng-disabled="vm.empForm.$invalid">
+						<button class="btn btn-default" type="submit">
 							<fa name="search" size="1" title="search"></fa>
 							ค้นหา
 						</button>
@@ -90,7 +105,7 @@
 					<div class="col-md-1 text-center">
 						<button class="btn btn-default"
 							ng-click="vm.emp.id == null ? vm.resetForm() : vm.resetDefault()"
-							type="button" ng-disabled="vm.empForm.$pristine">
+							type="button" ng-disabled="vm.prodForm.$pristine">
 							<fa name="remove" size="1" title="Reset"></fa>
 							ยกเลิก
 						</button>
@@ -100,61 +115,124 @@
 		</form>
 		</uib-tab> <uib-tab active="vm.tabs[1].selected" heading="{{vm.tabs[1].title}}"
 			ng-click="vm.resetPage()">
-			<form class="form-horizontal form-margin">
-				<div class="col-md-12">
-					<div class="col-md-4">
-						<div class="form-group">
-							<label class="col-md-4 control-label">รหัสสินค้า</label>
-							<div class="col-md-8">
-								<input type="text" ng-model="vm.prod.prodCode" class="form-control">
-							</div>
+		<div flash-message="3500" class="text-center"></div>
+		<form class="form-horizontal form-margin" novalidate="novalidate"
+			ng-submit="vm.formControl()" name="vm.prodForm">
+			<div class="col-md-12">
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">รหัสสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" ng-model="vm.prod.prodCode"
+								class="form-control" required>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="form-group">
-							<label class="col-md-4 control-label">ชื่อสินค้า</label>
-							<div class="col-md-8">
-								<input type="text" ng-model="vm.prod.prodName" class="form-control">
-							</div>
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">ชื่อสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" ng-model="vm.prod.prodName"
+								class="form-control" required>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="form-group">
-							<label class="col-md-4 control-label">ยี่ห้อสินค้า</label>
-							<div class="col-md-8">
-								<input type="text" ng-model="vm.prod.prodBrand" class="form-control">
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">ยี่ห้อสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" ng-model="vm.prod.prodBrand"
+								class="form-control" required>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12">
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">รุ่นสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" ng-model="vm.prod.prodModel"
+								class="form-control">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">สีสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" ng-model="vm.prod.prodColor"
+								class="form-control">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">ราคาสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" ng-model="vm.prod.prodPrice"
+								class="form-control" required>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12">
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">จำนวนสินค้า</label>
+						<div class="col-md-8">
+							<input type="text" ng-model="vm.prod.prodQuantity"
+								class="form-control" required>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">ประเภทสินค้า</label>
+						<div class="col-md-8">
+							<div class="input-group">
+								<input type="text" class="form-control"
+									aria-describedby="credit"
+									ng-model="vm.prod.productType.typeName" readonly required><span
+									class="input-group-btn">
+									<button title="search" ng-bootbox-custom-dialog
+										ng-bootbox-custom-dialog-template="common/partials/select-prodType-dialog.tpl.html"
+										ng-bootbox-options="vm.viewProdTypeModal"
+										ng-click="vm.getProdType()" class="btn btn-default"
+										type="button">
+										<fa name="search" size="1"></fa>
+									</button>
+								</span> <span class="input-group-btn"><button title="Reset"
+										ng-click="vm.prod.productType = null" class="btn btn-default"
+										type="button">
+										<fa name="remove" size="1"></fa>
+									</button></span>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-12">
-					<div class="col-md-4">
-						<div class="form-group">
-							<label class="col-md-4 control-label">สีสินค้า</label>
-							<div class="col-md-8">
-								<input type="text" ng-model="vm.prod.prodColor" class="form-control">
-							</div>
-						</div>
+			</div>
+			<div class="col-md-12">
+				<div class="form-group">
+					<div class="col-md-1 col-md-offset-5 text-center">
+						<button class="btn btn-default" type="submit"
+							ng-disabled="vm.prodForm.$invalid">
+							<fa name="floppy-o" size="1" tital="Save"></fa>
+							บันทึก
+						</button>
 					</div>
-					<div class="col-md-4">
-						<div class="form-group">
-							<label class="col-md-4 control-label">ราคาสินค้า</label>
-							<div class="col-md-8">
-								<input type="text" ng-model="vm.prod.prodPrice" class="form-control">
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="form-group">
-							<label class="col-md-4 control-label">ยี่ห้อสินค้า</label>
-							<div class="col-md-8">
-								<input type="text" ng-model="vm.prod.prodBrand" class="form-control">
-							</div>
-						</div>
+					<div class="col-md-1 text-center">
+						<button class="btn btn-default" type="button"
+							ng-click="vm.prod.id == null ? vm.resetForm() : vm.resetDefault()"
+							type="button" ng-disabled="vm.prodForm.$pristine">
+							<fa name="remove" size="1" title="Reset"></fa>
+							ยกเลิก
+						</button>
 					</div>
 				</div>
-			</form>
-			</uib-tab> </uib-tabset>
+			</div>
+		</form>
+		</uib-tab> </uib-tabset>
 
 		<!-- Employee Table -->
 
@@ -171,7 +249,7 @@
 				st-safe-src="vm.prodList" class="table table-striped table-bordered">
 				<thead>
 					<tr>
-						<th class="text-center"></th>
+						<th></th>
 						<th class="text-center" st-sort="prodCode">รหัสสินค้า</th>
 						<th class="text-center" st-sort="prodName">ชื่อสินค้า</th>
 						<th class="text-center" st-sort="prodBrand">ยี่ห้อ</th>
@@ -186,22 +264,22 @@
 				</thead>
 				<tbody>
 					<tr ng-repeat="prod in displayedProd">
-						<td class="text-center"></td>
+						<td>{{$index+1}}</td>
 						<td class="text-center">{{prod.prodCode}}</td>
 						<td class="text-center">{{prod.prodName}}</td>
-						<td class="text-center">{{prod.prodBrand}}td>
+						<td class="text-center">{{prod.prodBrand}}</td>
 						<td class="text-center">{{prod.prodModel}}</td>
 						<td class="text-center">{{prod.prodColor}}</td>
 						<td class="text-center">{{prod.prodPrice}}</td>
 						<td class="text-right">{{prod.prodQuantity}}</td>
-						<td class="text-right">{{prod.productType}}</td>
+						<td class="text-right">{{prod.productType.typeName}}</td>
 						<td class="text-right">{{prod.prodStatus}}</td>
 						<td class="text-center"><button class="btn btn-info"
-								ng-click="vm.update(emp)">
+								ng-click="vm.update(prod)">
 								<fa name="edit"></fa>
 							</button>
 
-							<button class="btn btn-danger" ng-click="vm.remove(emp.id)">
+							<button class="btn btn-danger" ng-click="vm.remove(prod.id)">
 								<fa name="trash-o"></fa>
 							</button></td>
 					</tr>
