--- a/src/main/webapp/app/user/user.view.html
+++ b/src/main/webapp/app/user/user.view.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="app.prodType">
+<html ng-app="app.user">
 <head>
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Product Management</title>
+<title>User Management</title>
 <link rel="shortcut icon" type="image/png" href="./img/3gs_icon.png" />
 <!-- MAIN STYLE -->
 <link rel="stylesheet" href="./assets/css/main.css" />
@@ -22,29 +22,52 @@
 </head>
 <body ng-cloak>
 	<div class="container-fluid container-margin"
-		ng-controller="ProdTypeCtrl as vm">
+		ng-controller="UserCtrl as vm">
 		<uib-tabset> <uib-tab active="vm.tabs[0].selected"
 			heading="{{vm.tabs[0].title}}" select="vm.resetPage()"
 			ng-click="vm.resetTable()">
 		<div flash-message="3500" class="text-center"></div>
 		<form class="form-horizontal form-margin" novalidate="novalidate"
-			ng-submit="vm.search()" name="vm.prodTypeForm">
+			ng-submit="vm.search()" name="vm.userForm">
 			<div class="col-md-12">
 				<div class="col-md-4">
 					<div class="form-group">
-						<label class="col-md-4 control-label">รหัสประเภทสินค้า</label>
+						<label class="col-md-4 control-label">ชื่อผู้ใช้งาน</label>
 						<div class="col-md-8">
 							<input type="text" class="form-control"
-								ng-model="vm.prodType.typeCode">
+								ng-model="vm.userRole.user.username">
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="form-group">
-						<label class="control-label col-md-4">ชื่อประเภทสินค้า</label>
+						<label class="col-md-4 control-label">ระดับผู้ใช้งาน</label>
 						<div class="col-md-8">
-							<input type="text" class="form-control"
-								ng-model="vm.prodType.typeName">
+							<div class="input-group">
+								<input type="text" class="form-control"
+									aria-describedby="credit" ng-model="vm.userRole.role" readonly><span
+									class="input-group-btn">
+									<button title="search" ng-bootbox-custom-dialog
+										ng-bootbox-custom-dialog-template="common/partials/select-userRole-dialog.tpl.html"
+										ng-bootbox-options="vm.viewRoleModal" ng-click="vm.getRole()"
+										class="btn btn-default" type="button">
+										<fa name="search" size="1"></fa>
+									</button>
+								</span> <span class="input-group-btn"><button title="Reset"
+										ng-click="vm.userRole.role = null" class="btn btn-default"
+										type="button">
+										<fa name="remove" size="1"></fa>
+									</button></span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label class="col-md-4 control-label">สถานะการใช้งาน</label>
+						<div class="col-md-8">
+							<select ng-model="vm.selectedStatus"
+								ng-options="u.title for u in vm.userStatus" ng-change="vm.userRole.user.enabled = vm.selectedStatus.value" class="form-control"></select>
 						</div>
 					</div>
 				</div>
@@ -52,8 +75,7 @@
 			<div class="col-md-12 col-sm-12">
 				<div class="form-group">
 					<div class="col-md-1 col-md-offset-5 text-center">
-						<button class="btn btn-default" type="submit"
-							ng-disabled="vm.empForm.$invalid">
+						<button class="btn btn-default" type="submit">
 							<fa name="search" size="1" title="search"></fa>
 							ค้นหา
 						</button>
@@ -61,7 +83,7 @@
 					<div class="col-md-1 text-center">
 						<button class="btn btn-default"
 							ng-click="vm.emp.id == null ? vm.resetForm() : vm.resetDefault()"
-							type="button" ng-disabled="vm.prodTypeForm.$pristine">
+							type="button" ng-disabled="vm.userForm.$pristine">
 							<fa name="remove" size="1" title="Reset"></fa>
 							ยกเลิก
 						</button>
@@ -73,15 +95,14 @@
 			ng-click="vm.resetPage()">
 		<div flash-message="3500" class="text-center"></div>
 		<form class="form-horizontal form-margin" novalidate="novalidate"
-			name="vm.prodTypeForm" ng-submit="vm.formControl()"
-			name="vm.prodTypeForm">
+			name="vm.userForm" ng-submit="vm.formControl()">
 			<div class="col-md-12">
 				<div class="col-md-6">
 					<div class="form-group">
 						<label class="control-label col-md-4">รหัสประเภท</label>
 						<div class="col-md-8">
 							<input type="text" class="form-control"
-								ng-model="vm.prodType.typeCode" required>
+								ng-model="vm.userRole.user.typeCode" required>
 						</div>
 					</div>
 				</div>
@@ -90,7 +111,7 @@
 						<label class="control-label col-md-4">ชื่อประเภท</label>
 						<div class="col-md-8">
 							<input type="text" class="form-control"
-								ng-model="vm.prodType.typeName" required>
+								ng-model="vm.userRole.user.typeName" required>
 						</div>
 					</div>
 				</div>
@@ -100,7 +121,8 @@
 					<div class="form-group">
 						<label class="control-label col-md-4">รายละเอียด</label>
 						<div class="col-md-8">
-							<textarea class="form-control" ng-model="vm.prodType.typeDesc"></textarea>
+							<textarea class="form-control"
+								ng-model="vm.userRole.user.typeDesc"></textarea>
 						</div>
 					</div>
 				</div>
@@ -109,15 +131,15 @@
 				<div class="form-group">
 					<div class="col-md-1 col-md-offset-5 text-center">
 						<button class="btn btn-default" type="submit"
-							ng-disabled="vm.prodTypeForm.$invalid">
+							ng-disabled="vm.userForm.$invalid">
 							<fa name="floppy-o" size="1" tital="Save"></fa>
 							บันทึก
 						</button>
 					</div>
 					<div class="col-md-1 text-center">
 						<button class="btn btn-default"
-							ng-click="vm.prodType.id == null ? vm.resetForm() : vm.resetDefault()"
-							type="button" ng-disabled="vm.prodTypeForm.$pristine">
+							ng-click="vm.userRole.user.id == null ? vm.resetForm() : vm.resetDefault()"
+							type="button" ng-disabled="vm.userForm.$pristine">
 							<fa name="remove" size="1" title="Reset"></fa>
 							ยกเลิก
 						</button>
@@ -127,7 +149,7 @@
 		</form>
 		</uib-tab> </uib-tabset>
 
-		<!-- Product_type Table -->
+		<!-- User Table -->
 
 		<div class="col-md-12">
 			<div class="pull-right">
@@ -138,26 +160,29 @@
 			</div>
 		</div>
 		<div class="col-md-12">
-			<table st-table="displayedProdType" wt-responsive-table
-				st-safe-src="vm.prodTypeList"
-				class="table table-striped table-bordered">
+			<table st-table="displayedUser" wt-responsive-table
+				st-safe-src="vm.userList" class="table table-striped table-bordered">
 				<thead>
 					<tr>
-						<th class="text-center" st-sort="typeCode">รหัสประเภท</th>
-						<th class="text-center" st-sort="typeName">ชื่อประเภท</th>
+						<th class="text-center" st-sort="username">รหัสประเภท</th>
+						<th class="text-center" st-sort="password">ชื่อประเภท</th>
+						<th class="text-center" st-sort="userRole">รหัสประเภท</th>
+						<th class="text-center" st-sort="enabled">ชื่อประเภท</th>
 						<th></th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="prodType in displayedProdType">
-						<td class="text-center">{{prodType.typeCode}}</td>
-						<td class="text-center">{{prodType.typeName}}</td>
+					<tr ng-repeat="user in displayedUser">
+						<td class="text-center">{{user.user.username}}</td>
+						<td class="text-center">{{user.user.password}}</td>
+						<td class="text-center">{{user.role}}</td>
+						<td class="text-center">{{user.user.enabled}}</td>
 						<td class="text-center"><button class="btn btn-info"
-								ng-click="vm.update(prodType)">
+								ng-click="vm.update(user)">
 								<fa name="edit"></fa>
 							</button>
 
-							<button class="btn btn-danger" ng-click="vm.remove(prodType.id)">
+							<button class="btn btn-danger" ng-click="vm.remove(user.id)">
 								<fa name="trash-o"></fa>
 							</button></td>
 					</tr>
@@ -173,15 +198,15 @@
 				</tfoot>
 			</table>
 		</div>
+		{{vm.userRole}}
 	</div>
 
 	<!-- APPLICATION -->
 	<script src="./app/app.js">
+		
 	</script>
-	<script src="./app/app.config.js">
-	</script>
-	<script src="./app/product_type/product_type.ctrl.js"></script>
-	<script src="./app/product_type/product_type.service.js"></script>
+	<script src="./app/user/user.ctrl.js"></script>
+	<script src="./app/user/user.service.js"></script>
 	<!-- BOOTSTRAP -->
 	<script src="./assets/js/jquery.min.js"></script>
 	<script src="./assets/js/bootstrap.min.js"></script>
