--- a/src/main/webapp/app/user/user.view.html
+++ b/src/main/webapp/app/user/user.view.html
@@ -104,7 +104,7 @@
 						<label class="control-label col-md-4">ชื่อผู้ใช้งาน</label>
 						<div class="col-md-8">
 							<input type="text" class="form-control"
-								ng-model="vm.userRole.user.typeCode" required>
+								ng-model="vm.userRole.user.username"  >
 						</div>
 					</div>
 				</div>
@@ -113,7 +113,7 @@
 						<label class="control-label col-md-4">รหัสผ่าน</label>
 						<div class="col-md-8">
 							<input type="text" class="form-control"
-								ng-model="vm.userRole.user.typeName" required>
+								ng-model="vm.userRole.user.password"  >
 						</div>
 					</div>
 				</div>
@@ -122,7 +122,7 @@
 						<label class="control-label col-md-4">ยืนยันรหัสผ่าน</label>
 						<div class="col-md-8">
 							<input type="text" class="form-control"
-								ng-model="vm.userRole.user.typeName" required>
+								ng-model="vm.userRole.user.password"  >
 						</div>
 					</div>
 				</div>
@@ -130,9 +130,24 @@
 			<div class="col-md-12">
 				<div class="col-md-4">
 					<div class="form-group">
-						<label class="control-label col-md-4">ระดับผู้ใช้งาน</label>
+						<label class="col-md-4 control-label">ระดับผู้ใช้งาน</label>
 						<div class="col-md-8">
-							<input type="text" class="form-control">
+							<div class="input-group">
+								<input type="text" class="form-control"
+									aria-describedby="credit" ng-model="vm.userRole.role" readonly><span
+									class="input-group-btn">
+									<button title="search" ng-bootbox-custom-dialog
+										ng-bootbox-custom-dialog-template="common/partials/select-userRole-dialog.tpl.html"
+										ng-bootbox-options="vm.viewRoleModal" ng-click="vm.getRole()"
+										class="btn btn-default" type="button">
+										<fa name="search" size="1"></fa>
+									</button>
+								</span> <span class="input-group-btn"><button title="Reset"
+										ng-click="vm.userRole.role = null" class="btn btn-default"
+										type="button">
+										<fa name="remove" size="1"></fa>
+									</button></span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -140,7 +155,22 @@
 					<div class="form-group">
 						<label class="control-label col-md-4">พนักงาน</label>
 						<div class="col-md-8">
-							<input type="text" class="form-control">
+							<div class="input-group">
+								<input type="text" class="form-control"
+									aria-describedby="credit" ng-model="vm.userRole.user.empInfo.empName" readonly><span
+									class="input-group-btn">
+									<button title="search" ng-bootbox-custom-dialog
+										ng-bootbox-custom-dialog-template="common/partials/select-emp-dialog.tpl.html"
+										ng-bootbox-options="vm.viewCustModal" ng-click="vm.getEmp()"
+										class="btn btn-default" type="button">
+										<fa name="search" size="1"></fa>
+									</button>
+								</span> <span class="input-group-btn"><button title="Reset"
+										ng-click="vm.userRole.user.empInfo = null" class="btn btn-default"
+										type="button">
+										<fa name="remove" size="1"></fa>
+									</button></span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -150,7 +180,7 @@
 					<div class="form-group">
 						<label class="control-label col-md-4">รหัสพนักงาน</label>
 						<div class="col-md-8">
-							<input type="text" readonly class="form-control">
+							<input type="text" readonly class="form-control" ng-model="vm.userRole.user.empInfo.empCode">
 						</div>
 					</div>
 				</div>
@@ -158,7 +188,7 @@
 					<div class="form-group">
 						<label class="control-label col-md-4">ชื่อพนักงาน</label>
 						<div class="col-md-8">
-							<input type="text" readonly class="form-control">
+							<input type="text" readonly class="form-control" ng-model="vm.userRole.user.empInfo.empName">
 						</div>
 					</div>
 				</div>
@@ -166,7 +196,7 @@
 					<div class="form-group">
 						<label class="control-label col-md-4">เบอร์โทร</label>
 						<div class="col-md-8">
-							<input type="text" readonly class="form-control">
+							<input type="text" readonly class="form-control" ng-model="vm.userRole.user.empInfo.empPhone">
 						</div>
 					</div>
 				</div>
@@ -176,7 +206,7 @@
 					<div class="form-group">
 						<label class="control-label col-md-4">สถานที่อยู่</label>
 						<div class="col-md-8">
-							<input type="text" readonly class="form-control">
+							<input type="text" readonly class="form-control" ng-model="vm.userRole.user.empInfo.empAddress">
 						</div>
 					</div>
 				</div>
@@ -184,7 +214,7 @@
 					<div class="form-group">
 						<label class="control-label col-md-4">รายละเอียดอื่นๆ</label>
 						<div class="col-md-8">
-							<textarea  class="form-control" readonly></textarea>
+							<textarea class="form-control" readonly ng-model="vm.userRole.user.empInfo.empDesc"></textarea>
 						</div>
 					</div>
 				</div>
@@ -261,6 +291,7 @@
 				</tfoot>
 			</table>
 		</div>
+		{{vm.userRole}}
 	</div>
 
 	<!-- APPLICATION -->
