--- a/src/main/webapp/app/customer/customer.view.html
+++ b/src/main/webapp/app/customer/customer.view.html
@@ -116,7 +116,7 @@
 							<div class="col-md-4">
 							<label class="col-md-4 control-label">รายละเอียด</label>
 							<div class="col-md-8">
-								<textarea class="form-control" ng-model="vm.cus.cusDesc"></textarea>
+								<textarea class="form-control" ng-model="vm.cus.custDesc"></textarea>
 							</div>
 						</div>
 					</div>
@@ -178,7 +178,7 @@
 						<td class="text-center"><textarea readonly
 								class="form-control">{{cus.custDesc}}</textarea></td>
 						<td class="text-center"><button class="btn btn-info"
-								ng-click="vm.update(cus)">
+								ng-click="vm.edit(cus)">
 								<fa name="edit"></fa>
 							</button>
 
