--- a/src/main/webapp/app/user/user.view.html
+++ b/src/main/webapp/app/user/user.view.html
@@ -104,7 +104,7 @@
 						<label class="control-label col-md-4">ชื่อผู้ใช้งาน</label>
 						<div class="col-md-8">
 							<input type="text" class="form-control"
-								ng-model="vm.userRole.user.username" ng-readonly="vm.userRole.user.username != null">
+								ng-model="vm.userRole.user.username" ng-readonly="vm.userRole.user.id != null">
 						</div>
 					</div>
 				</div>
